try container job

--- a/.github/workflows/container-job.yml
+++ b/.github/workflows/container-job.yml
@@ -4,6 +4,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    container:
+      image: busybox
     steps:
       - run: |
           echo Hello World
